--- a/alpha.ipynb
+++ b/alpha.ipynb
@@ -2,98 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "chararray([[b'g', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', ''],\n",
-       "           ['', '', '', '', '', '', '', '', '', '', '', '', '', '', b'P']],\n",
-       "          dtype='|S1')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "board = np.chararray(shape = (12,15))\n",
-    "\n",
-    "board[:,:] = ''\n",
-    "\n",
-    "g = 'g'\n",
-    "board[0,0] = g\n",
-    "g_ind = np.where(board == b'g')\n",
-    "\n",
-    "p = 'P'\n",
-    "\n",
-    "board[11,14] = P\n",
-    "p_ind = np.where(board == b'P')\n",
-    "\n",
-    "board"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# A goblin approaches! Choose your weapon!\n",
-    "### 1. Sword  2. Bow"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "weap = input()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def move(who = p, w = 'north', d = 5):\n",
-    "    f = p_ind\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
